# file

./: .gitignore  configure.ac
src/: Makefile.am  apprentice.c  compress.c  file.c  file.h  funcs.c  magic.c
tests/: test.c
